styles.css
*{
    font-family: "Exo-Light";
    letter-spacing: 1px;
}

body{
    margin:0;
}

#container{
    display: flex;
    flex-wrap: wrap;
}

::placeholder{
    opacity: 0.5;
}

#sidebar{
    display:flex;
    flex:1 30%;
    flex-direction: column;
    justify-content: space-between;
    height: 100vh;
    background-image: radial-gradient(at 50% 30%, rgba(0,0,0,0),rgba(0,0,0,0.5) 70%,rgba(0,0,0,1) 90%),url("/media/gaming.jpg");
    background-position: center;
    object-fit: cover;
    align-items: center;
}

#header img{
    width:70px;
    border-radius: 50%;
    box-shadow: 3px 3px 5px 2px;
}

@font-face {
    font-family: "Exo";
    src: url("/media/Exo-Black.otf");
}

@font-face {
    font-family: "Exo-Light";
    src: url("/media/Exo-Light.otf");
}

h1{
    color:floralwhite;
    font-family: "Exo", sans-serif;
    font-size: 50px;
}

#main-content{
    flex:2 60%;
}

#header{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap:20px;
    background-color:rgba(72, 61, 139, 70%);
    width:100%;
    padding: 10px 0;
    margin-top:50%;
}

#sidebar p{
    color:white;
    font-size:small;
}

#sidebar a:link{
    color: orange;
}

#sidebar a:visited{
    color: darkorange;
}

#main-content{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgba(92, 92, 92, 0.2);
}

#main-text{
    margin-top:10%;
    font-size:1.2rem;
    max-width:50ch;
    
}

#form-section{
    background-color: white;
}

#submit-section{
    margin-bottom:10%;
}

#main-text,
#form-section,
#submit-section,
#footer{
    box-sizing: border-box;
    padding:20px 20px 0 20px;
}

